tmp.log
In file included from include/woody.h:71,
                 from include/opts.h:4,
                 from include/asm.h:6,
                 from src/asm.c:1:
include/polyblock.h:132:126: error: unknown type name ‘t_format_backend’
  132 | char *generate_decrypt_stub(t_polyblock *target_blk, t_diff_result *diff, t_decrypt_method method, const char *target_label, t_format_backend *backend);
      |                                                                                                                              ^~~~~~~~~~~~~~~~
In file included from include/woody.h:71,
                 from include/opts.h:4,
                 from include/asm.h:6,
                 from src/asm.c:1:
include/polyblock.h:133:72: error: unknown type name ‘t_format_backend’
  133 | int substitute_decrypt_slots(t_polyctx *ctx, t_block_variant *variant, t_format_backend *backend);
      |                                                                        ^~~~~~~~~~~~~~~~
include/polyblock.h:135:80: error: unknown type name ‘t_format_backend’
  135 | int polyblock_resolve_sizes(t_asm *a, t_polyctx *ctx, size_t initial_position, t_format_backend *backend);
      |                                                                                ^~~~~~~~~~~~~~~~
include/polyblock.h:136:50: error: unknown type name ‘t_format_backend’
  136 | int polyblock_assemble(t_asm *a, t_polyctx *ctx, t_format_backend *backend);
      |                                                  ^~~~~~~~~~~~~~~~
In file included from include/woody.h:72,
                 from include/opts.h:4,
                 from include/asm.h:6,
                 from src/asm.c:1:
include/format_backend.h:8:5: error: unknown type name ‘t_target_format’
    8 |     t_target_format format;
      |     ^~~~~~~~~~~~~~~
src/asm.c: In function ‘polyblock_link’:
src/asm.c:274:9: error: implicit declaration of function ‘polyblock_resolve_sizes’ [-Werror=implicit-function-declaration]
  274 |     if (polyblock_resolve_sizes(a, ctx, a->out->e.len) < 0)
      |         ^~~~~~~~~~~~~~~~~~~~~~~
src/asm.c: In function ‘polyblock_resolve_sizes’:
src/asm.c:321:13: error: implicit declaration of function ‘substitute_decrypt_slots’ [-Werror=implicit-function-declaration]
  321 |         if (substitute_decrypt_slots(ctx, &blk->ciphertext, backend) < 0)
      |             ^~~~~~~~~~~~~~~~~~~~~~~~
src/asm.c: In function ‘asm_build’:
src/asm.c:1783:21: error: implicit declaration of function ‘polyblock_assemble’; did you mean ‘polyblock_parse_all’? [-Werror=implicit-function-declaration]
 1783 |                 if (polyblock_assemble(&a, pctx, backend) < 0)
      |                     ^~~~~~~~~~~~~~~~~~
      |                     polyblock_parse_all
cc1: all warnings being treated as errors
make: *** [Makefile:30: obj/asm.o] Error 1
